--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@
     margin: 20px auto;
     font-weight: 100;
     line-height: 25px;
-    font-size: x-large;
+    font-size: xx-large;
   }
   
   button {
